# googleprojectzero_winafl

./: FUZZING_INTEGRATION_GUIDE.md  INTEGRATION_QUICK_REFERENCE.md  INTEGRATION_README.md  QUICK_START.md  VULNERABILITY_HUNTING_GUIDE.md  analyze_crashes.ps1  deploy_fuzzing.ps1  fuzz_target.ps1  setup_winafl.ps1  targets.json
examples/simple_parser/: README.md  build.bat  fuzz_harness.c  run_fuzzing.bat  simple_parser.c
templates/: CMakeLists.txt  harness_template.c
